--- a/style1.css
+++ b/style1.css
@@ -9,7 +9,7 @@ h5 {
 .bodybis {
   color: black;
 }
-.div1 {
+.intro-superior{
   margin-left: auto;
   margin-right: auto;
   max-width: 1140px;
@@ -19,20 +19,20 @@ header {
   margin-bottom: 16px;
   text-align: center;
 }
-.div4 {
+.cuadro-superior {
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
   margin: 16px;
   color: #000;
   background-color: #fff;
 }
 
-.div5 {
+.Descripcion-producto {
   margin-left: 16px;
   margin-top: 16px;
   margin-bottom: 16px;
   margin-right: 16px;
 }
-.href1 {
+.href-compra {
   border: none;
   display: inline-block;
   padding: 8px 16px;
@@ -45,32 +45,32 @@ header {
   cursor: pointer;
   white-space: nowrap;
 }
-.div6 {
+.producto-inferior {
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
   margin: 16px;
   color: #000;
   background-color: #fff;
 }
-.i1 {
+.logo {
   width: 100%;
 }
-.div7 {
+.box-historia {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   margin: 16px;
 }
-.div8 {
+.pie-logo {
   padding: 0.01em 16px;
   color: #000;
   background-color: #fff;
 }
-.div9 {
+.caja-popularposts {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   margin: 16px;
 }
-.div10 {
+.titulo-caja-fotos {
   padding: 0.01em 16px;
 }
-.ul1 {
+.estilo-estaciones {
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -82,32 +82,32 @@ header {
   color: #000;
   background-color: #fff;
 }
-.li1 {
+.fotos-season{
   padding-top: 16px;
   padding-bottom: 16px;
 }
-.istandard {
+.estilo-foto {
   float: left;
   margin-right: 16px;
   width: 100px;
 }
-.span1 {
+.titulos-fotos {
   font-size: 18px;
 }
 
-.div11 {
+.caja-inferior-derecha {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   margin: 16px;
 }
-.div12 {
+.nombre-caja{
   padding: 0.01em 16px;
 }
-.div13 {
+.estilo-caja-inferior-derecha {
   padding: 0.01em 16px;
   color: #000;
   background-color: #fff;
 }
-.hrefstandard {
+.estilo-links-con-tu-stanley{
   background-color: #000;
   color: #fff;
   display: inline-block;
@@ -125,7 +125,7 @@ footer {
   padding-top: 32px;
   margin-top: 16px;
 }
-.b1 {
+.boton-next {
   border: none;
   display: inline-block;
   padding: 8px 16px;
