--- a/style2.css
+++ b/style2.css
@@ -7,25 +7,25 @@ h5,
 h6 {
   font-family: "Karma", sans-serif;
 }
-.div1 {
+.titulo-superior {
   position: fixed;
   width: 100%;
   z-index: 1;
   top: 0;
 }
-.div2 {
+.estilo-caja-superior{
   color: rgb(255, 255, 255);
   background-color: rgba(58, 100, 58, 0.934);
   font-size: 24px;
   max-width: 1200px;
   margin: auto;
 }
-.div3 {
+.texto-titulo {
   text-align: center;
   padding-top: 16px;
   padding-bottom: 16px;
 }
-.div4 {
+.productos {
   margin-left: auto;
   margin-right: auto;
   max-width: 980px;
@@ -37,7 +37,7 @@ h6 {
   width: 100%;
   height: 478.9px;
 }
-.div5 {
+.estilo-slogan {
   padding: 0.01em 16px;
 
   padding-top: 32px;
@@ -45,7 +45,7 @@ h6 {
 
   text-align: center;
 }
-.im2 {
+.imagen-grande {
   max-width: 100%;
   height: auto;
   color: inherit;
@@ -54,7 +54,7 @@ h6 {
   width: 700px;
   height: 450px;
 }
-.div6 {
+.estilo-origen {
   padding-top: 32px;
   padding-bottom: 32px;
 }
