--- a/style1.css
+++ b/style1.css
@@ -9,7 +9,7 @@ h5 {
 .bodybis {
   color: black;
 }
-.intro-superior{
+.intro-superior {
   margin-left: auto;
   margin-right: auto;
   max-width: 1140px;
@@ -51,8 +51,8 @@ header {
   color: #000;
   background-color: #fff;
 }
-.imagen-inf{
-  width: 100%
+.imagen-inf {
+  width: 100%;
 }
 .logo {
   width: 100%;
@@ -85,7 +85,7 @@ header {
   color: #000;
   background-color: #fff;
 }
-.fotos-season{
+.fotos-season {
   padding-top: 16px;
   padding-bottom: 16px;
 }
@@ -102,7 +102,7 @@ header {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   margin: 16px;
 }
-.nombre-caja{
+.nombre-caja {
   padding: 0.01em 16px;
 }
 .estilo-caja-inferior-derecha {
@@ -110,7 +110,7 @@ header {
   color: #000;
   background-color: #fff;
 }
-.estilo-links-con-tu-stanley{
+.estilo-links-con-tu-stanley {
   background-color: #000;
   color: #fff;
   display: inline-block;
